--- a/Wallywood-api/package.json
+++ b/Wallywood-api/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "prisma": {
+  "seed": "tsx prisma/seedCSV.ts"
+},
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
@@ -11,7 +14,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:reset": "prisma migrate reset",
-    "seed": "tsx prisma/seed.ts"
+    "seed": "tsx prisma/seedCSV.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +23,7 @@
     "@prisma/client": "^5.0.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "csv-parse": "^6.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2"
@@ -27,6 +31,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.14",
+    "@types/csv-parse": "^1.1.12",
     "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.6.0",
